# aic-sdk-py

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  aic.pyi  aic_sdk.pyi  apt.txt  dot-env.template  enhance.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  taplo.toml
.github/workflows/: _build-and-publish.yml  build-and-publish.yml  build-and-release.yml  build-linux.yml  build-macos.yml  build-wheels.yml  build-windows.yml  build.yml  gh-pages.yml  post-publish-tests.yml  pre-commit.yml  release.yml  rust-quality.yml  test-release-download.yml  test.yml
aic/: __init__.py  _bindings.py
api/: index.html
binder/: requirements.txt
docs/: api.md  examples.md  getting-started.md  index.md  low-level-bindings.md
examples/: README.md  aic_stream.py  analyze_file.py  basic.py  basic_async.py  benchmark.py  benchmark_realtime.py  enhance.py  enhance_and_plot.ipynb  enhance_file.py  enhance_files.py  index.html  latency_spike_repro.py  requirements.txt
getting-started/: index.html
integration_tests/: test_real_sdk.py
low-level-bindings/: index.html
search/: search_index.json
src/: analyzer.rs  async_runtime.rs  error.rs  file_analyzer.rs  lib.rs  model.rs  otel_config.rs  processor.rs  processor_async.rs  vad.rs
stub-gen/: Cargo.toml
stub-gen/src/: main.rs
tests/: conftest.py  test_analyzer.py  test_bindings.py  test_errors.py  test_file_analyzer.py  test_golden_audio.py  test_golden_vad.py  test_model.py  test_processor.py  test_processor_async.py  test_processor_config.py  test_processor_context.py  test_real_sdk.py  test_real_sdk_async.py  test_sdk_info.py  test_vad_context.py  test_variable_frames.py
tests/data/: vad_results.json
tests/helpers/: audio_utils.py
