[workspace]
members = ["stub-gen"]

[package]
edition = "2024"
name = "aic-sdk-py"
rust-version = "1.88"
version = "2.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "aic_sdk"

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
aic-sdk = { version = "0.17.0", features = ["download-lib", "download-model"] }
numpy = "0.27"
pyo3 = { version = "0.27", features = ["generate-import-lib", "multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pyo3-stub-gen = { version = "0.20", default-features = false, features = ["infer_signature"] }
rayon = "1"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "sync"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
