[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aic-sdk"
version = "2.0.0"
description = "Python bindings for ai-coustics SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["numpy>=2.0.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["aic_sdk.pyi"]
