[project]
name = "aic-sdk"
version = "2.0.0"
description = "Python bindings for ai-coustics SDK"
readme = "README.md"
authors = [{ name = "ai-coustics GmbH", email = "info@ai-coustics.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["aic_sdk.pyi"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
