[project]
authors = [{ name = "ai-coustics GmbH", email = "info@ai-coustics.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = ["numpy>=2.0.2"]
description = "Python bindings for ai-coustics SDK"
license = { file = "LICENSE" }
name = "aic-sdk"
readme = "README.md"
requires-python = ">=3.10"
version = "2.0.1"

[dependency-groups]
dev = ["pytest-asyncio>=1.3.0", "pytest>=9.0.2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["aic_sdk.pyi"]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]
